feat: add fonts, add Eslint

--- a/src/styles/abstract/placeholders.scss
+++ b/src/styles/abstract/placeholders.scss
@@ -3,5 +3,9 @@
 }
 
 %font-prim {
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: 'Roboto', 'Arial', sans-serif;
+}
+
+%font-add {
+  font-family: 'Times New Roman', Times, serif;
 }
