--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -23,14 +23,13 @@
   }
 }
 
-// списки
+// списки, ссылки и кнопки с hover
 @mixin list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-// ссылки и кнопки с hover
 @mixin link($color: $color-dark-xl) {
   text-decoration: none;
   color: $color;
@@ -42,11 +41,13 @@
 }
 
 @mixin button {
+  padding: 0;
   display: flex;
   text-align: center;
   justify-content: center;
   background-color: transparent;
   border: none;
+  cursor: pointer;
   @extend %transition-opacity;
 
   &:hover {
@@ -54,54 +55,20 @@
   }
 }
 
-// для текста ссылок
-@mixin menu-link {
-  font-size: 1.8rem;
-  font-weight: 400;
-  line-height: 1.38;
-
-  @include media-small {
-    font-size: 1.4rem;
-    font-weight: 500;
-  }
-}
-
 // для заголовков секций
-@mixin section-title {
+@mixin section-title($color: $color-dark-xl) {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  font-size: 3.8rem;
-  font-weight: 400;
+  color: $color;
+  font-size: 4rem;
+  font-weight: $fw-regular;
   line-height: normal;
-  letter-spacing: -0.88px;
-
-  &:after {
-    content: '';
-    width: 100%;
-    min-height: 2.3rem;
-    border-bottom: 1px $color-light-l solid;
-  }
-
-  @include media-mobile {
-    font-size: 2.8rem;
-    letter-spacing: -0.72px;
-
-    &:after {
-      min-height: 2.8rem;
-    }
-  }
 }
 
 // для текста
-@mixin text($color: $color-dark-xl) {
+@mixin text($color: $color-dark-xl, $font-weight: $fw-regular) {
   margin: 0;
   color: $color;
-  font-size: 1.8rem;
-  font-weight: 400;
-  line-height: 1.5;
-
-  @include media-mobile {
-    font-size: 1.4rem;
-  }
+  font-size: 1.6rem;
+  font-weight: $font-weight;
+  line-height: 1.38;
 }
