feat: add Promo

--- a/src/components/CallButton/CallButton.scss
+++ b/src/components/CallButton/CallButton.scss
@@ -16,7 +16,7 @@
     left: 0;
     top: 0;
     display: block;
-    background-image: url(../../image/icons/phone.svg);
+    background-image: url(../../images/icons/phone.svg);
     background-size: cover;
   }
 }
