--- a/src/layouts/Footer/Footer.scss
+++ b/src/layouts/Footer/Footer.scss
@@ -12,3 +12,8 @@
   display: flex;
   justify-content: space-between;
 }
+
+.footer__location {
+  @include text($color-light-xl);
+  @include location;
+}
