--- a/src/styles/abstract/constants.scss
+++ b/src/styles/abstract/constants.scss
@@ -1,11 +1,7 @@
 $color-light-xl: #fff;
-$color-light-l: #dadada;
-$color-light-m: #8b8b8b;
-$color-light-s: #424242;
-$color-light-xs: #2f2f2f;
-$color-dark-xs: #313131;
-$color-dark-l: #202020;
+$color-light-l: #e7e6e6;
 $color-dark-xl: #000;
+$color-lime: #cde943;
 $color-bg: #660066;
 $color-bg-dark: #2e002e;
 
