--- a/src/styles/abstract/placeholders.scss
+++ b/src/styles/abstract/placeholders.scss
@@ -9,3 +9,7 @@
 %font-add {
   font-family: 'Times New Roman', Times, serif;
 }
+
+%font-thin {
+  font-family: 'Roboto Condensed', Times, serif;
+}
