--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -30,9 +30,7 @@
   list-style: none;
 }
 
-@mixin link($color: $color-dark-xl) {
-  text-decoration: none;
-  color: $color;
+@mixin hover {
   @extend %transition-opacity;
 
   &:hover {
@@ -40,19 +38,21 @@
   }
 }
 
+@mixin link($color: $color-dark-xl) {
+  text-decoration: none;
+  color: $color;
+  @include hover;
+}
+
 @mixin button {
   padding: 0;
   display: flex;
-  text-align: center;
+  align-items: center;
   justify-content: center;
   background-color: transparent;
   border: none;
   cursor: pointer;
-  @extend %transition-opacity;
-
-  &:hover {
-    opacity: 0.8;
-  }
+  @include hover;
 }
 
 // для заголовков секций
@@ -71,4 +71,38 @@
   font-size: 1.6rem;
   font-weight: $font-weight;
   line-height: 1.38;
+}
+
+@mixin text-m($color: $color-dark-xl, $font-weight: $fw-regular) {
+  margin: 0;
+  color: $color;
+  font-size: 1.8rem;
+  font-weight: $font-weight;
+  line-height: 1.33;
+}
+
+@mixin text-l($color: $color-dark-xl, $font-weight: $fw-regular) {
+  margin: 0;
+  color: $color;
+  font-size: 2.4rem;
+  font-weight: $font-weight;
+  line-height: normal;
+}
+
+// location
+@mixin location {
+  padding-left: 3.2rem;
+  position: relative;
+
+  &:before {
+    content: '';
+    width: 2.4rem;
+    height: 2.4rem;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: block;
+    background-image: url(../../images/icons/place.svg);
+    background-size: cover;
+  }
 }
