--- a/src/styles/abstract/constants.scss
+++ b/src/styles/abstract/constants.scss
@@ -1,9 +1,11 @@
 $color-light-xl: #fff;
 $color-light-l: #e7e6e6;
 $color-dark-xl: #000;
+$color-red: #8c002a;
 $color-lime: #cde943;
 $color-bg: #660066;
 $color-bg-dark: #2e002e;
+$color-bg-light: #a173df;
 
 // для медиа-запросов
 $content-width: 144rem;
