--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -65,6 +65,14 @@
 }
 
 // для текста
+@mixin text-s($color: $color-dark-xl, $font-weight: $fw-regular) {
+  margin: 0;
+  color: $color;
+  font-size: 1.4rem;
+  font-weight: $font-weight;
+  line-height: normal;
+}
+
 @mixin text($color: $color-dark-xl, $font-weight: $fw-regular) {
   margin: 0;
   color: $color;
