--- a/src/styles/abstract/placeholders.scss
+++ b/src/styles/abstract/placeholders.scss
@@ -2,6 +2,10 @@
   transition: opacity 0.4s linear;
 }
 
+%transition-all {
+  transition: all 0.4s linear;
+}
+
 %font-prim {
   font-family: 'Roboto', 'Arial', sans-serif;
 }
