--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -58,6 +58,7 @@
 // для заголовков секций
 @mixin section-title($color: $color-dark-xl) {
   margin: 0;
+  padding-bottom: 4rem;
   color: $color;
   font-size: 4rem;
   font-weight: $fw-regular;
