--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -3,7 +3,7 @@
 @import '../../styles/abstract/placeholders.scss';
 
 .card {
-  padding: 3rem;
+  padding: 2.8rem;
   position: relative;
   max-width: 23.7rem;
   min-height: 50.3rem;
@@ -12,10 +12,11 @@
   justify-content: space-between;
   background-color: $color-light-xl;
   border-radius: 2rem;
+  cursor: pointer;
   @extend %transition-all;
 
   &:hover {
-    filter: drop-shadow(0px 16px 48px rgba(0, 0, 0, 0.22));
+    filter: drop-shadow(2px 3px 6px rgba(0, 0, 0, 0.22));
     transform: scale(1.01);
   }
 }
@@ -48,7 +49,7 @@
   padding: 0 2rem;
   width: 17.9rem;
   aspect-ratio: 1 / 1.57;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
 
