--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -47,11 +47,13 @@ body {
 }
 
 .wrapper {
-  max-width: $content-width;
-  height: 100%;
   margin: auto;
   padding: 0 8rem;
+  max-width: $content-width;
+  height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
 
   @include media-medium {
     padding: 0 4rem;
