--- a/src/pages/Home/components/CatalogSection/CatalogCard/CatalogCard.scss
+++ b/src/pages/Home/components/CatalogSection/CatalogCard/CatalogCard.scss
@@ -12,9 +12,11 @@
   cursor: pointer;
   @extend %transition-all;
 
-  &:hover {
-    filter: drop-shadow(2px 3px 6px rgba(0, 0, 0, 0.22));
-    transform: scale(1.01);
+  @include media-hover {
+    &:hover {
+      filter: drop-shadow(2px 3px 6px rgba(0, 0, 0, 0.22));
+      transform: scale(1.02);
+    }
   }
 }
 
