feat: add Delivery

--- a/src/pages/Home/components/About/About.scss
+++ b/src/pages/Home/components/About/About.scss
@@ -32,8 +32,8 @@
   width: 100%;
   max-width: 37.2rem;
   display: grid;
-  grid-template-columns: min-content auto;
-  grid-template-rows: min-content auto;
+  grid-template-columns: 5.2rem auto;
+  grid-template-rows: 5.2rem auto;
   justify-content: start;
   align-items: center;
   row-gap: 2rem;
