--- a/src/styles/abstract/constants.scss
+++ b/src/styles/abstract/constants.scss
@@ -13,9 +13,10 @@ $color-bg-light: #a173df;
 
 // для медиа-запросов
 $content-width: 144rem;
-$medium-width: 1024px;
-$small-width: 768px;
-$mobile-width: 550px;
+$medium-width: 1280px;
+$laptop-width: 768px;
+$small-width: 650px;
+$mobile-width: 490px;
 
 /* font */
 $fw-regular: 400;
