--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -5,6 +5,12 @@
   }
 }
 
+@mixin media-laptop {
+  @media (max-width: $laptop-width) {
+    @content;
+  }
+}
+
 @mixin media-small {
   @media (max-width: $small-width) {
     @content;
@@ -114,4 +120,15 @@
     background-image: url(../../images/icons/place.svg);
     background-size: cover;
   }
+}
+
+// для элементов бургера
+@mixin burger-line {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  background-color: $color-light-xl;
+  width: 100%;
+  min-height: 2px;
+  @extend %transition-all;
 }
