feat: add background for burger

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,18 +7,6 @@ html {
   scroll-behavior: smooth;
 }
 
-.page {
-  margin: 0;
-
-  &_lock {
-    overflow: hidden;
-
-    @include media-hover {
-      padding-right: 17px;
-    }
-  }
-}
-
 #root {
   display: flex;
   position: relative;
@@ -47,6 +35,18 @@ html {
   }
 }
 
+.page {
+  margin: 0;
+
+  &_lock {
+    overflow: hidden;
+
+    @include media-hover {
+      padding-right: 17px;
+    }
+  }
+}
+
 .wrapper {
   margin: auto;
   padding: 0 8rem;
@@ -66,5 +66,23 @@ html {
 
   @include media-mobile {
     padding: 0 1.6rem;
+  }
+}
+
+.background {
+  margin: 0;
+  padding: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  background: rgba(0, 0, 0, 0.3);
+  @extend %transition-all;
+  z-index: 9;
+
+  &_active {
+    visibility: visible;
   }
 }
