--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,7 +5,8 @@
 .button {
   @include button;
   @include text;
-  width: 17.9rem;
+  max-width: 17.9rem;
+  width: 100%;
   height: 3.8rem;
   border-radius: 1.2rem;
   border: 2px solid $color-bg;
