--- a/src/pages/Home/components/CatalogSection/CatalogCard/CatalogCard.scss
+++ b/src/pages/Home/components/CatalogSection/CatalogCard/CatalogCard.scss
@@ -18,18 +18,55 @@
       transform: scale(1.02);
     }
   }
+
+  @include media-medium {
+    padding: 2.3rem;
+    max-width: 20.5rem;
+  }
+
+  @include media-laptop {
+    padding: 2.1rem 1.6rem 1.9rem;
+    max-width: 13.4rem;
+    border-radius: 1.2rem;
+
+    button {
+      display: none;
+    }
+  }
 }
 
 .catalog-card__image {
-  width: 17.9rem;
+  width: 100%;
   aspect-ratio: 1 / 1.57;
   object-fit: contain;
   object-position: center;
+  align-self: center;
+}
+
+.catalog-card__title-flex {
+  padding-top: 1.5rem;
+  min-height: 9.5rem;
+  display: flex;
+
+  @include media-medium {
+    padding-top: 1.2rem;
+    min-height: 7.3rem;
+  }
+
+  @include media-laptop {
+    min-height: 5rem;
+    padding-top: 0.7rem;
+    align-items: center;
+  }
 }
 
 .catalog-card__title {
   @include text-l;
   @extend %font-thin;
-  min-height: 9.5rem;
-  padding-top: 1.5rem;
+  overflow-wrap: break-word;
+  hyphens: auto;
+
+  @include media-medium {
+    @include text-m;
+  }
 }
