--- a/src/pages/Home/components/About/About.scss
+++ b/src/pages/Home/components/About/About.scss
@@ -11,11 +11,25 @@
   .wrapper {
     align-items: center;
   }
+
+  @include media-medium {
+    padding: 5rem 0 5rem;
+    border-radius: 1.6rem;
+  }
+
+  @include media-small {
+    padding: 5rem 0 5.2rem;
+    border-radius: 0;
+  }
 }
 
 .about__title {
   @include section-title($color-light-xl);
   align-self: flex-start;
+
+  @include media-small {
+    width: 27rem;
+  }
 }
 
 .about__list {
@@ -26,6 +40,15 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 5.2rem;
+
+  @include media-medium {
+    padding-top: 1rem;
+    gap: 3.2rem;
+  }
+
+  @include media-small {
+    gap: 2.4rem;
+  }
 }
 
 .about__item {
@@ -38,6 +61,10 @@
   align-items: center;
   row-gap: 2rem;
   column-gap: 1.8rem;
+
+  @include media-medium {
+    max-width: 28.8rem;
+  }
 }
 
 .about__img {
@@ -54,4 +81,8 @@
   @include text-m($color-light-xl);
   grid-column: 1 / 3;
   align-self: start;
+
+  @include media-medium {
+    @include text($color-light-xl);
+  }
 }
