--- a/src/pages/Home/components/Promo/Promo.scss
+++ b/src/pages/Home/components/Promo/Promo.scss
@@ -58,7 +58,7 @@
         rgba(23, 23, 24, 0.8) 20%,
         rgba(0, 0, 0, 0) 57.5%
       ),
-      url('../../../../images/Promo/1.jpg');
+      url('../../../../images/Promo/11-min.jpg');
     background-position: center;
     background-size: cover;
 
@@ -68,7 +68,7 @@
           #171718 14.09%,
           rgba(23, 23, 24, 0) 55.58%
         ),
-        url(../../../../images/Promo/1.jpg);
+        url(../../../../images/Promo/11-min.jpg);
       background-position: center;
       background-size: cover;
     }
@@ -81,7 +81,7 @@
         rgba(23, 23, 24, 0.8) 20%,
         rgba(0, 0, 0, 0) 57.5%
       ),
-      url('../../../../images/Promo/2.jpg');
+      url('../../../../images/Promo/21-min.jpg');
     background-position: center;
     background-size: cover;
 
@@ -91,7 +91,7 @@
           #171718 14.09%,
           rgba(23, 23, 24, 0) 55.58%
         ),
-        url(../../../../images/Promo/2.jpg);
+        url(../../../../images/Promo/21-min.jpg);
       background-position: center;
       background-size: cover;
     }
@@ -104,7 +104,7 @@
         rgba(23, 23, 24, 0.8) 20%,
         rgba(0, 0, 0, 0) 57.5%
       ),
-      url('../../../../images/Promo/3.jpg');
+      url('../../../../images/Promo/31-min.jpg');
     background-position: center;
     background-size: cover;
 
@@ -114,7 +114,7 @@
           #171718 14.09%,
           rgba(23, 23, 24, 0) 55.58%
         ),
-        url(../../../../images/Promo/3.jpg);
+        url(../../../../images/Promo/31-min.jpg);
       background-position: center;
       background-size: cover;
     }
