--- a/src/styles/abstract/constants.scss
+++ b/src/styles/abstract/constants.scss
@@ -1,5 +1,6 @@
 $color-light-xl: #fff;
 $color-light-l: #e7e6e6;
+$color-light-m: #e2e2e2;
 $color-dark-m: #757575;
 $color-dark-l: #545454;
 $color-dark-xl: #000;
