--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -2,6 +2,10 @@
 @import '../../styles/abstract/constants.scss';
 @import '../../styles/abstract/mixins.scss';
 
+.input {
+  position: relative;
+}
+
 .input__name {
   margin: 0;
   @include text-s;
@@ -9,7 +13,6 @@
 
 .input__field {
   @include text;
-  margin: 0.6rem 0 0.3rem;
   padding: 1.6rem;
   width: 100%;
   box-sizing: border-box;
@@ -68,4 +71,17 @@
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.2;
+}
+
+.input__search {
+  width: 2.4rem;
+  height: 2.4rem;
+  position: absolute;
+  top: 1.6rem;
+  left: 45.7rem;
+  display: block;
+  background-image: url(../../images/icons/search.svg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
