--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -22,7 +22,7 @@
     }
   }
 
-  @include media-laptop {
+  @include media-tablet {
     padding: 2.8rem 2.5rem;
   }
 }
@@ -94,6 +94,7 @@
   @include text($font-weight: $fw-bold);
 
   &_sale {
+    color: $color-dark-m;
     text-decoration: line-through;
   }
 }
