--- a/src/pages/Catalog/components/DoubleRange/DoubleRange.scss
+++ b/src/pages/Catalog/components/DoubleRange/DoubleRange.scss
@@ -3,13 +3,24 @@
 @import '../../../../styles/abstract/placeholders.scss';
 
 .range {
-  padding: 0.8rem 0.9rem 0;
+  padding: 1.6rem 0.9rem 0;
   width: 100%;
   display: grid;
   grid-template-columns: auto auto;
-  grid-template-rows: auto 4rem;
+  grid-template-rows: auto 4rem auto;
   column-gap: 1.6rem;
-  row-gap: 2.4rem;
+  row-gap: 1rem;
+  border-top: 1px solid $color-bg;
+
+  button {
+    margin-top: 1.2rem;
+    grid-column: 1 / 3;
+    justify-self: center;
+  }
+
+  @include media-small {
+    padding: 1.6rem 0 0;
+  }
 }
 
 .range__label {
@@ -27,7 +38,7 @@
   display: flex;
   width: 100%;
   @include text;
-  padding: 1.2rem 0.6rem 1.2rem 3.6rem;
+  padding: 1.1rem 0.6rem 1.1rem 3.6rem;
   border: 2px solid $color-light-l;
   border-radius: 0.8rem;
   background-color: $color-light-l;
