--- a/src/pages/Home/components/Bestsellers/Bestsellers.scss
+++ b/src/pages/Home/components/Bestsellers/Bestsellers.scss
@@ -12,7 +12,7 @@
     padding: 10.6rem 3rem 4.3rem;
   }
 
-  @include media-laptop {
+  @include media-tablet {
     padding: 7.6rem 1rem 4.3rem;
   }
 
