--- a/src/pages/Home/components/CatalogSection/CatalogCard/CatalogCard.scss
+++ b/src/pages/Home/components/CatalogSection/CatalogCard/CatalogCard.scss
@@ -24,7 +24,7 @@
     max-width: 20.5rem;
   }
 
-  @include media-laptop {
+  @include media-tablet {
     padding: 2.1rem 1.6rem 1.9rem;
     max-width: 13.4rem;
     border-radius: 1.2rem;
@@ -53,7 +53,7 @@
     min-height: 7.3rem;
   }
 
-  @include media-laptop {
+  @include media-tablet {
     min-height: 5rem;
     padding-top: 0.7rem;
     align-items: center;
