--- a/src/pages/Home/components/Delivery/Delivery.scss
+++ b/src/pages/Home/components/Delivery/Delivery.scss
@@ -8,7 +8,7 @@
   .wrapper {
     padding: 10rem 4rem;
 
-    @include media-laptop {
+    @include media-tablet {
       padding: 3.2rem 0;
     }
 
