--- a/src/pages/Home/components/Promo/Promo.scss
+++ b/src/pages/Home/components/Promo/Promo.scss
@@ -10,7 +10,7 @@
 .slick-dots {
   bottom: 1.4rem;
 
-  @include media-laptop {
+  @include media-tablet {
     bottom: 0.9rem;
   }
 }
@@ -27,7 +27,7 @@
     border-radius: 50%;
     background-color: $color-light-xl;
 
-    @include media-laptop {
+    @include media-tablet {
       width: 1.2rem;
       height: 1.2rem;
     }
@@ -136,7 +136,7 @@
   max-width: 55rem;
   width: 100%;
 
-  @include media-laptop {
+  @include media-tablet {
     max-width: 28.8rem;
     top: 31%;
     left: 3%;
@@ -158,7 +158,7 @@
   line-height: normal;
   color: $color-light-xl;
 
-  @include media-laptop {
+  @include media-tablet {
     font-size: 3.6rem;
   }
 }
@@ -168,7 +168,7 @@
   @extend %font-thin;
   padding-bottom: 5.1rem;
 
-  @include media-laptop {
+  @include media-tablet {
     @include text($color-light-xl);
     padding-bottom: 3.1rem;
   }
@@ -201,7 +201,7 @@
     }
   }
 
-  @include media-laptop {
+  @include media-tablet {
     width: 28.8rem;
   }
 }
