--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -11,6 +11,12 @@
   }
 }
 
+@mixin media-tablet {
+  @media (max-width: $tablet-width) {
+    @content;
+  }
+}
+
 @mixin media-small {
   @media (max-width: $small-width) {
     @content;
@@ -70,7 +76,7 @@
   font-weight: $fw-regular;
   line-height: normal;
 
-  @include media-laptop {
+  @include media-tablet {
     padding-bottom: 2.3rem;
     font-size: 3.6rem;
   }
