--- a/src/pages/Catalog/components/ProductCard/ProductCard.scss
+++ b/src/pages/Catalog/components/ProductCard/ProductCard.scss
@@ -65,6 +65,7 @@
   object-position: center;
 
   @include media-laptop {
+    padding: 0;
     aspect-ratio: 1 / 1.4;
   }
 }
@@ -95,6 +96,9 @@
 
   @include media-laptop {
     @include text-s;
+    -ms-line-clamp: 2;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
   }
 }
 
